--- a/workings.ipynb
+++ b/workings.ipynb
@@ -1708,6 +1708,307 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://localhost:5432/intro_to_sql_for_analytics\n",
+      "10 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>index</th>\n",
+       "            <th>country</th>\n",
+       "            <th>countrycode</th>\n",
+       "            <th>name</th>\n",
+       "            <th>sport</th>\n",
+       "            <th>sport_short</th>\n",
+       "            <th>event</th>\n",
+       "            <th>medal</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0</td>\n",
+       "            <td>Czech Republic</td>\n",
+       "            <td>CZE</td>\n",
+       "            <td>DRAHONINSKY David</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Men&#x27;s Individual - W1</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>People&#x27;s Republic of China</td>\n",
+       "            <td>CHN</td>\n",
+       "            <td>HE Zihao</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Men&#x27;s Individual Compound - Open</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>United States of America</td>\n",
+       "            <td>USA</td>\n",
+       "            <td>MATHER Kevin</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Men&#x27;s Individual Recurve - Open</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>3</td>\n",
+       "            <td>People&#x27;s Republic of China</td>\n",
+       "            <td>CHN</td>\n",
+       "            <td>CHEN Minyi</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Women&#x27;s Individual - W1</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>4</td>\n",
+       "            <td>Great Britain</td>\n",
+       "            <td>GBR</td>\n",
+       "            <td>PATERSON PINE Phoebe</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Women&#x27;s Individual Compound - Open</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>Islamic Republic of Iran</td>\n",
+       "            <td>IRI</td>\n",
+       "            <td>NEMATI Zahra</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Women&#x27;s Individual Recurve - Open</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>People&#x27;s Republic of China</td>\n",
+       "            <td>CHN</td>\n",
+       "            <td>CHEN Minyi</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Mixed Team - W1</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>People&#x27;s Republic of China</td>\n",
+       "            <td>CHN</td>\n",
+       "            <td>ZHANG Tianxin</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Mixed Team - W1</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>8</td>\n",
+       "            <td>People&#x27;s Republic of China</td>\n",
+       "            <td>CHN</td>\n",
+       "            <td>HE Zihao</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Mixed Team Compound - Open</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>9</td>\n",
+       "            <td>People&#x27;s Republic of China</td>\n",
+       "            <td>CHN</td>\n",
+       "            <td>LIN Yueshan</td>\n",
+       "            <td>Archery</td>\n",
+       "            <td>ARC</td>\n",
+       "            <td>Mixed Team Compound - Open</td>\n",
+       "            <td>Gold Medal</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(0, 'Czech Republic', 'CZE', 'DRAHONINSKY David', 'Archery', 'ARC', \"Men's Individual - W1\", 'Gold Medal'),\n",
+       " (1, \"People's Republic of China\", 'CHN', 'HE Zihao', 'Archery', 'ARC', \"Men's Individual Compound - Open\", 'Gold Medal'),\n",
+       " (2, 'United States of America', 'USA', 'MATHER Kevin', 'Archery', 'ARC', \"Men's Individual Recurve - Open\", 'Gold Medal'),\n",
+       " (3, \"People's Republic of China\", 'CHN', 'CHEN Minyi', 'Archery', 'ARC', \"Women's Individual - W1\", 'Gold Medal'),\n",
+       " (4, 'Great Britain', 'GBR', 'PATERSON PINE Phoebe', 'Archery', 'ARC', \"Women's Individual Compound - Open\", 'Gold Medal'),\n",
+       " (5, 'Islamic Republic of Iran', 'IRI', 'NEMATI Zahra', 'Archery', 'ARC', \"Women's Individual Recurve - Open\", 'Gold Medal'),\n",
+       " (6, \"People's Republic of China\", 'CHN', 'CHEN Minyi', 'Archery', 'ARC', 'Mixed Team - W1', 'Gold Medal'),\n",
+       " (7, \"People's Republic of China\", 'CHN', 'ZHANG Tianxin', 'Archery', 'ARC', 'Mixed Team - W1', 'Gold Medal'),\n",
+       " (8, \"People's Republic of China\", 'CHN', 'HE Zihao', 'Archery', 'ARC', 'Mixed Team Compound - Open', 'Gold Medal'),\n",
+       " (9, \"People's Republic of China\", 'CHN', 'LIN Yueshan', 'Archery', 'ARC', 'Mixed Team Compound - Open', 'Gold Medal')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT *\n",
+    "FROM medals\n",
+    "LIMIT 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://localhost:5432/intro_to_sql_for_analytics\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count</th>\n",
+       "            <th>name</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>RAIMONDI Stefano</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>7</td>\n",
+       "            <td>KRYPAK Maksym</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>TRUSOV Andrii</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>6</td>\n",
+       "            <td>LONG Jessica</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>5</td>\n",
+       "            <td>GILLI Carlotta</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(7, 'RAIMONDI Stefano'),\n",
+       " (7, 'KRYPAK Maksym'),\n",
+       " (6, 'TRUSOV Andrii'),\n",
+       " (6, 'LONG Jessica'),\n",
+       " (5, 'GILLI Carlotta')]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT COUNT(*), name\n",
+    "    FROM medals\n",
+    "    GROUP BY name\n",
+    "    HAVING COUNT(*) > 1\n",
+    "    ORDER BY COUNT DESC\n",
+    "    LIMIT 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Marco wanted to write a query that returns list of countries ordered by the number of medals they won, with the country winning the most medals at the top. Their query is below... it doesn't work as intended."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://localhost:5432/intro_to_sql_for_analytics\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>count</th>\n",
+       "            <th>countrycode</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>276</td>\n",
+       "            <td>CHN</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>171</td>\n",
+       "            <td>GBR</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>167</td>\n",
+       "            <td>USA</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>153</td>\n",
+       "            <td>RPC</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>111</td>\n",
+       "            <td>BRA</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(276, 'CHN'), (171, 'GBR'), (167, 'USA'), (153, 'RPC'), (111, 'BRA')]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT\n",
+    "    COUNT(*), countrycode\n",
+    "    FROM medals\n",
+    "    GROUP BY countrycode\n",
+    "    ORDER BY count DESC\n",
+    "    LIMIT 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
